fixed styling on mobile for Home h1

--- a/src/components/AnimatedLetters/index.scss
+++ b/src/components/AnimatedLetters/index.scss
@@ -19,8 +19,8 @@
   }
 }
 
-@for $i from 1 through 37 {
+@for $i from 1 through 41 {
   .text-animate._#{$i} {
-    animation-delay: #{$i / 10}s;
+    animation-delay: #{$i / 15}s;
   }
 }
