--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -4,7 +4,7 @@
     left: 10%;
     top: 50%;
     transform: translateY(-50%);
-    width: 40%;
+    width: 50%;
     max-height: 90%;
   }
 
@@ -40,7 +40,7 @@
     }
 
     img {
-      margin-left: 20px;
+      // margin-left: 5px;
       margin-right: -15px;
       opacity: 0;
       width: 60px;
